--- a/src/components/newList/_comp/duetime.css
+++ b/src/components/newList/_comp/duetime.css
@@ -1,8 +1,7 @@
 .due-time { 
     position: relative;
-    width: 95%;
+    width: 100%;
     height: 35px;
-    margin: 0 2.5%
 }
 .due-time-symbol {
     margin-right: 7px;
@@ -19,6 +18,7 @@
     background-image: linear-gradient(#fff, #d3d3d3);
     display: block;
     z-index: 1000;
+    border-radius: 10px;
 }
 .time-choice-hour > span {
     display: inline-block;
