--- a/src/components/newList/_comp/edit.css
+++ b/src/components/newList/_comp/edit.css
@@ -4,3 +4,7 @@
     text-align: center;
     font-size: 20px;
 }
+.edit-body {
+    width: 92%;
+    margin: 0 4%;
+}
